fixed access spacing b/w blogs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ time, h2, p {
 }
 
 .small-img-blog-holder, .small-img-blog-holder-2, .small-img-blog-holder-3, .small-img-blog-holder-4, .small-img-blog-holder-5, .small-img-blog-holder-6, .small-img-blog-holder-7{
-    padding: 2em 1em 2em 1em;
+    padding: 2em 1em 1em 1em;
     /* height: 30vh;
     width: 92vw; */
     display: flex;
@@ -124,7 +124,6 @@ time, h2, p {
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    margin-bottom: -20px;
 }
 .blog-upload-time-small {
     font-size: 0.85rem;
@@ -140,6 +139,8 @@ time, h2, p {
     display: -webkit-box;
     -webkit-line-clamp: 3; /* number of lines to show */
     -webkit-box-orient: vertical;
+    padding: 0;
+    margin: 0;
 }
 
 .small-img-blog-holder-2 {
